--- a/app/src/main/res/layout/dialog_chooseloc.xml
+++ b/app/src/main/res/layout/dialog_chooseloc.xml
@@ -7,17 +7,39 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/solidcolorrel2"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@color/pearl_white">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/emer" />
+        </RelativeLayout>
+
         <TextView
             android:id="@+id/please_choose"
-            android:layout_width="270dp"
+            android:layout_below="@+id/solidcolorrel2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="It seems your photo don't have a location tagged. Please choose a location"
             android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:textColor="@color/black"
             />
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_toLeftOf="@id/current_location"
+            android:src="@mipmap/ic_currentloc"
+            android:layout_marginTop="134dp"
+            android:layout_marginEnd="6dp"/>
         <TextView
             android:id="@+id/current_location"
             android:layout_below="@+id/please_choose"
@@ -26,12 +48,16 @@
             android:layout_height="wrap_content"
             android:text="Current Location"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:padding="10dp"
             android:textColor="@drawable/text_changecolor"
-            android:textSize="12sp"
+            android:textSize="17sp"
             android:layout_marginBottom="10dp"/>
-
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_toLeftOf="@+id/search_location"
+            android:layout_marginTop="167dp"
+            android:src="@mipmap/ic_searchloc"
+            android:layout_marginEnd="6dp"/>
         <TextView
             android:id="@+id/search_location"
             android:layout_below="@+id/current_location"
@@ -40,10 +66,8 @@
             android:layout_height="wrap_content"
             android:text="Search for a location"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:padding="10dp"
             android:textColor="@drawable/text_changecolor"
-            android:textSize="12sp"
+            android:textSize="17sp"
             android:layout_marginBottom="10dp"/>
 
     </RelativeLayout>
