--- a/app/src/main/res/drawable-xhdpi/rounded_border_blue.xml
+++ b/app/src/main/res/drawable-xhdpi/rounded_border_blue.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="@color/link_blue" />
+        android:color="@color/emercifycolor" />
 
     <solid
-        android:color="@color/link_blue"
+        android:color="@color/emercifycolor"
         />
 
     // Reduce the corner radius value
