--- a/app/src/main/res/layout/dialog_chooseloc.xml
+++ b/app/src/main/res/layout/dialog_chooseloc.xml
@@ -19,10 +19,14 @@
                 android:layout_centerVertical="true"
                 android:background="@drawable/emer" />
         </RelativeLayout>
-
+        <RelativeLayout
+            android:layout_below="@+id/solidcolorrel2"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/please_choose"
-            android:layout_below="@+id/solidcolorrel2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="It seems your photo don't have a location tagged. Please choose a location"
@@ -34,11 +38,14 @@
             android:textColor="@color/black"
             />
         <ImageView
+            android:id="@+id/current_locimg"
+            android:layout_below="@+id/please_choose"
             android:layout_width="15dp"
             android:layout_height="15dp"
+            android:layout_marginTop="5dp"
             android:layout_toLeftOf="@id/current_location"
+            android:layout_centerVertical="true"
             android:src="@mipmap/ic_currentloc"
-            android:layout_marginTop="134dp"
             android:layout_marginEnd="6dp"/>
         <TextView
             android:id="@+id/current_location"
@@ -52,10 +59,12 @@
             android:textSize="17sp"
             android:layout_marginBottom="10dp"/>
         <ImageView
+            android:id="@+id/search_locimg"
+            android:layout_below="@+id/current_location"
             android:layout_width="15dp"
             android:layout_height="15dp"
+            android:layout_marginTop="5dp"
             android:layout_toLeftOf="@+id/search_location"
-            android:layout_marginTop="167dp"
             android:src="@mipmap/ic_searchloc"
             android:layout_marginEnd="6dp"/>
         <TextView
@@ -69,7 +78,7 @@
             android:textColor="@drawable/text_changecolor"
             android:textSize="17sp"
             android:layout_marginBottom="10dp"/>
-
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
